Implement JwtAuthenticationFilter aligned with AAP §0.3.4 / §0.6.6 / §0.7.2 spec
Implements the spec-compliant JWT bearer-token authentication filter for the
CardDemo REST API per AAP §0.3.4 (Session management — JWT bearer tokens) and
§0.7.2 (PCI-DSS Security & Compliance).

COBOL provenance — replaces:
  - app/cbl/COSGN00C.cbl PROCESS-ENTER-KEY -> READ-USER-SEC-FILE -> XCTL
    routing (L108-L246). The CICS pseudo-conversational identity check that
    ran once at signon and persisted identity in CARDDEMO-COMMAREA
    (app/cpy/COCOM01Y.cpy) is replaced by per-request JWT validation.
  - app/cpy/COCOM01Y.cpy CDEMO-USER-ID PIC X(08), CDEMO-USER-TYPE PIC X(01)
    with 88-levels CDEMO-USRTYP-ADMIN VALUE 'A' / CDEMO-USRTYP-USER VALUE 'U'
    -> JWT 'sub' and 'userType' claims; mapped to ROLE_ADMIN / ROLE_USER.
  - app/cpy/CSUSR01Y.cpy SEC-USR-ID PIC X(08), SEC-USR-TYPE PIC X(01)
    -> JWT subject and custom userType claim respectively.

Key implementation details:
  - Extends OncePerRequestFilter; guaranteed exactly-once execution per
    HTTP request (preventing double-validation on async dispatches).
  - Constructor injection of JwtTokenProvider (no @Autowired field injection
    per AAP §0.3.3 dependency-injection rule).
  - userType='A' -> ROLE_ADMIN; any other value (including 'U', null, blank,
    or unrecognised) defaults to ROLE_USER per spec — a valid token NEVER
    lands in the security context with empty authorities (mirrors COBOL
    'IF CDEMO-USRTYP-ADMIN ... ELSE ...' COSGN00C.cbl L230-L240).
  - PCI-DSS hygiene (AAP §0.6.6 / §0.7.2):
      * Token bytes NEVER logged at any level
      * Credentials field set to null on the UsernamePasswordAuthenticationToken
        so the raw token is not retained in the in-memory security context
      * SecurityContextHolder.clearContext() on validation failure to prevent
        stale-context leakage across servlet worker-thread reuse
      * WARN log on failure: request method + URI + exception message only
     